--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -488,3 +488,45 @@
         text-decoration: line-through;
     }
 }
+
+
+// * ------ Custom Form Input ------
+.form-input {
+    border: 1px solid $input-border-color;
+    font-size: $fontSize-root;
+    border-radius: 22px;
+    padding: 9px 16px;
+    margin: 7px 0;
+    background-color: transparent;
+    color: $color-textBase;
+    font-weight: $fontWeight-thin;
+    line-height: 19px;
+    height: unset;
+    height: 38px;
+}
+
+.form-label {
+    font-size: $fontSize-root - 4px;
+    line-height: 16px;
+    color: $color-textBase;
+}
+
+.form-select {
+    display: block;
+    width: 100%;
+    line-height: 1.4;
+    margin: 7px 0;
+    padding: 10px 28px 10px 16px;
+    font-size: 12px;
+    border-radius: 22px;
+    appearance: none;
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-color: transparent;
+    background-size: 16px auto;
+    padding-right: 28px;
+    text-indent: .01px;
+    text-overflow: unset;
+    cursor: pointer;
+    height: 38px;
+}
