--- a/templates/components/account/navigation.html
+++ b/templates/components/account/navigation.html
@@ -1,5 +1,9 @@
-<nav class="navBar navBar--sub navBar--account">
-    <ul class="navBar-section">
+<div class="accountSidebar__title hide-on-minMobile toggle__title">
+    <a href="#">{{lang 'account.nav.my_account'}}</a>
+</div>
+
+<nav class="navBar navBar--sub navBar--account accountSidebar__content toggle__content">
+    <ul class="navBar-section flex flex-col">
         <li class="navBar-item {{#if account_page '===' 'orders'}}is-active{{/if}}">
             <a class="navBar-action" href="{{urls.account.orders.all}}">{{lang 'account.nav.orders'}}</a>
         </li>
