--- a/templates/components/common/wishlist-dropdown.html
+++ b/templates/components/common/wishlist-dropdown.html
@@ -11,20 +11,23 @@
         {{#if customer.wishlists}}
             {{#each customer.wishlists}}
                 <li>
-                    <input class="button button--primary {{#if this.num_items '!==' '0'}}button--has-items{{/if}}"
-                           formaction="{{this.add_url}}&product_id={{../product.id}}"
-                           type="submit"
-                           value="{{this.name}}"
+                    <button class="button button--secondary{{#if this.num_items '!==' '0'}} button--has-items{{/if}}"
+                        formaction="{{this.add_url}}&product_id={{../product.id}}"
+                        type="submit"
                     >
+                    {{this.name}}
+                    </button>
                 </li>
             {{/each}}
         {{else}}
         <li>
-            <input class="button button--primary" type="submit" value="{{lang 'account.wishlists.add_to_default'}}">
+            <button class="button button--secondary" type="submit">
+                {{lang 'account.wishlists.add_to_default'}}
+            </button>
         </li>
         {{/if}}
         <li>
-            <a data-wishlist class="button button--primary" href="/wishlist.php?action=addwishlist&product_id={{product.id}}">{{lang 'account.wishlists.create_new'}}</a>
+            <a data-wishlist class="button button--secondary" href="/wishlist.php?action=addwishlist&product_id={{product.id}}">{{lang 'account.wishlists.create_new'}}</a>
         </li>
     </ul>
 </form>
