--- a/templates/components/custom/header/header-layout-2.html
+++ b/templates/components/custom/header/header-layout-2.html
@@ -35,7 +35,7 @@
 
             <div class="items item--account">
                 {{#if customer}}
-                    <a class="navUser-action navUser-action--logged button button--transparent flex-center-y hide-on-tablet" href="{{urls.account.index}}" aria-label="{{customer.name}}" data-login-form>
+                    <a class="navUser-action flex-center-y hide-on-tablet" href="{{urls.account.index}}" aria-label="{{customer.name}}" data-login-form>
                         <span class="navUser-icon">
                             <svg class="icon" aria-hidden="true"><use xlink:href="#icon-user"></use></svg>
                         </span>
