--- a/templates/components/custom/products/product-sticky-cart.html
+++ b/templates/components/custom/products/product-sticky-cart.html
@@ -1,4 +1,4 @@
-<div class="cartBar is-visible" id="cartBar">
+<div class="cartBar" id="cartBar">
     <div class="container h-full">
         <div class="cartBar__wrapper flex flex-center-x flex-between h-full">
             <div class="cartBar__info">
