--- a/templates/pages/account/wishlists.html
+++ b/templates/pages/account/wishlists.html
@@ -1,10 +1,17 @@
 {{#partial "page"}}
 {{#if settings.show_wishlist}}
-    <div class="account account--fixedLarge">
-        {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-        <h2 class="page-heading">{{lang 'account.wishlists.heading' }}</h2>
-        {{> components/account/navigation account_page='wishlists'}}
-        {{> components/account/wishlist-list}}
+
+    <div class="wrapper p-0 customAccount__wrapper">
+        <div class="customAccount__left">
+            {{> components/account/navigation account_page='wishlists'}}
+        </div>
+        
+        <div class="customAccount__right">
+            <div class="account account--fixedLarge">
+                <h2 class="page-heading">{{lang 'account.wishlists.heading' }}</h2>
+                {{> components/account/wishlist-list}}
+            </div>
+        </div>
     </div>
 {{/if}}
 {{/partial}}
