--- a/assets/scss/components/foundation/dropdown/_dropdown.scss
+++ b/assets/scss/components/foundation/dropdown/_dropdown.scss
@@ -106,6 +106,7 @@
     left: auto !important;
     max-width: none !important;
     width: 100% !important;
+    margin-top: 10px;
 
     @include breakpoint("small") {
         padding-right: 20px;
@@ -129,16 +130,16 @@
         width: 100%;
     }
 
+    > li {
+        border-top: 1px solid $color-custom-yellow;
+    }
+
     .button {
-        background-color: stencilColor("dropdown--wishList-backgroundColor");
+        background-color: #ffffff;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
         border-radius: 0;
         width: 100%;
-    }
-
-    .button--has-items {
-        font-weight: 700;
     }
 
     li:not(:last-child) .button {
