--- a/templates/components/account/wishlist-list.html
+++ b/templates/components/account/wishlist-list.html
@@ -26,8 +26,10 @@
                             <a href="{{share_url}}" class="button button--primary button--small"
                            role="button">{{lang 'common.share'}}</a>
                         {{/if}}
-                        <a href="{{edit_url}}" class="button button--small" data-wishlist>{{lang 'common.edit'}}</a>
-                        <input type="submit" value="{{lang 'common.delete'}}" class="button button--small" data-wishlist-delete>
+                        <a href="{{edit_url}}" class="button button--primary" data-wishlist>{{lang 'common.edit'}}</a>
+                        <button type="submit" class="button button--primary" data-wishlist-delete>
+                            {{lang 'common.delete'}}
+                        </button>
                     </fieldset>
                 </form>
             </td>
