--- a/templates/pages/account/add-wishlist.html
+++ b/templates/pages/account/add-wishlist.html
@@ -1,21 +1,26 @@
 {{#partial "page"}}
     <div class="account">
-        {{#if settings.show_wishlist}}
-            {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-            <h2 class="page-heading">
-                {{#if forms.wishlist.id}}
-                    {{lang 'account.wishlists.edit'}}
-                {{else}}
-                    {{#if forms.wishlist.action}}
-                        {{lang 'account.wishlists.new'}}
-                    {{else}}
-                        {{lang 'account.wishlists.heading'}}
-                    {{/if}}
-                {{/if}}
-            </h2>
-            {{> components/account/navigation account_page='wishlists'}}
-            {{> components/account/add-wishlist}}
-        {{/if}}
+        <div class="wrapper p-0 customAccount__wrapper">
+            {{#if settings.show_wishlist}}
+                <div class="customAccount__left">
+                    {{> components/account/navigation account_page='wishlists'}}
+                </div>
+                <div class="customAccount__right">
+                    <h2 class="page-heading">
+                        {{#if forms.wishlist.id}}
+                            {{lang 'account.wishlists.edit'}}
+                        {{else}}
+                            {{#if forms.wishlist.action}}
+                                {{lang 'account.wishlists.new'}}
+                            {{else}}
+                                {{lang 'account.wishlists.heading'}}
+                            {{/if}}
+                        {{/if}}
+                    </h2>
+                {{> components/account/add-wishlist}}
+                </div>
+            {{/if}}
+        </div>
     </div>
 {{/partial}}
 {{> layout/base}}
