--- a/templates/pages/account/edit.html
+++ b/templates/pages/account/edit.html
@@ -1,16 +1,22 @@
 {{inject 'passwordRequirements' settings.password_requirements}}
 {{#partial "page"}}
 <div class="account account--fixed">
-    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-    <h2 class="page-heading">{{lang 'account.settings.heading' }}</h2>
-    {{> components/account/navigation account_page='settings'}}
-    {{#if forms.edit_account.error}}
-    {{> components/common/alert/alert-error forms.edit_account.error}}
-    {{/if}}
-    {{#if forms.edit_account.success}}
-    {{> components/common/alert/alert-success forms.edit_account.success}}
-    {{/if}}
-    {{> components/account/edit-account}}
+    <div class="wrapper p-0 customAccount__wrapper">
+        <div class="customAccount__left">
+            {{> components/account/navigation account_page='settings'}}
+        </div>
+        
+        <div class="customAccount__right">
+            <h2 class="page-heading">{{lang 'account.settings.heading' }}</h2>
+            {{#if forms.edit_account.error}}
+            {{> components/common/alert/alert-error forms.edit_account.error}}
+            {{/if}}
+            {{#if forms.edit_account.success}}
+            {{> components/common/alert/alert-success forms.edit_account.success}}
+            {{/if}}
+            {{> components/account/edit-account}}
+        </div>
+    </div>
 </div>
 {{/partial}}
 {{> layout/base}}
