--- a/templates/pages/account/inbox.html
+++ b/templates/pages/account/inbox.html
@@ -1,23 +1,29 @@
 {{#partial "page"}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-<h1 class="page-heading">{{lang 'account.messages.heading' }}</h1>
-{{> components/account/navigation account_page='messages'}}
-
-<main class="account account--fixed">
-    <div class="account-body">
-        <section class="account-content">
-            {{#if forms.inbox.error}}
-                {{> components/common/alert/alert-error forms.inbox.error}}
-            {{/if}}
-            {{#if forms.inbox.success}}
-                {{> components/common/alert/alert-success forms.inbox.success}}
-            {{/if}}
-            {{> components/account/messages-list messages=customer.inbox.messages}}
-            {{> components/account/messages-form}}
-        </section>
+<div class="wrapper p-0 customAccount__wrapper">
+    <div class="customAccount__left">
+        {{> components/account/navigation account_page='messages'}}
     </div>
-</main>
+
+    <div class="customAccount__right">
+        <h1 class="page-heading">{{lang 'account.messages.heading' }}</h1>
+        
+        <main class="account account--fixed">
+            <div class="account-body">
+                <section class="account-content">
+                    {{#if forms.inbox.error}}
+                        {{> components/common/alert/alert-error forms.inbox.error}}
+                    {{/if}}
+                    {{#if forms.inbox.success}}
+                        {{> components/common/alert/alert-success forms.inbox.success}}
+                    {{/if}}
+                    {{> components/account/messages-list messages=customer.inbox.messages}}
+                    {{> components/account/messages-form}}
+                </section>
+            </div>
+        </main>
+    </div>
+</div>
 
 {{/partial}}
 {{> layout/base}}
