--- a/templates/pages/account/orders/all.html
+++ b/templates/pages/account/orders/all.html
@@ -6,29 +6,35 @@ customer:
 
 {{#partial "page"}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-<h1 class="page-heading">{{lang 'account.orders.heading' }}</h1>
-{{> components/account/navigation account_page='orders'}}
+<div class="wrapper p-0 customAccount__wrapper">
+    <div class="customAccount__left">
+        {{> components/account/navigation account_page='orders'}}
+    </div>
 
-<main class="account account--fixed">
-    <div class="account-head">
-        {{#if customer.store_credit.value '>' 0}}
-            <div class="alertBox alertBox--storeCredit">
-                {{{lang 'common.store_credit' store_credit=customer.store_credit.formatted}}}
+    <div class="customAccount__right">
+        <h1 class="page-heading">{{lang 'account.orders.heading' }}</h1>
+
+        <main class="account account--fixed">
+            <div class="account-head">
+                {{#if customer.store_credit.value '>' 0}}
+                    <div class="alertBox alertBox--storeCredit">
+                        {{{lang 'common.store_credit' store_credit=customer.store_credit.formatted}}}
+                    </div>
+                {{/if}}
             </div>
-        {{/if}}
+            <div class="account-body">
+                <section class="account-content">
+                    {{#if customer.orders.length}}
+                        {{> components/account/orders-list orders=customer.orders}}
+                        {{> components/common/small-paginator pagination.orders}}
+                    {{else}}
+                        {{> components/common/alert/alert-info (lang 'account.orders.none')}}
+                    {{/if}}
+                </section>
+            </div>
+        </main>
     </div>
-    <div class="account-body">
-        <section class="account-content">
-            {{#if customer.orders.length}}
-                {{> components/account/orders-list orders=customer.orders}}
-                {{> components/common/small-paginator pagination.orders}}
-            {{else}}
-                {{> components/common/alert/alert-info (lang 'account.orders.none')}}
-            {{/if}}
-        </section>
-    </div>
-</main>
+</div>
 
 {{/partial}}
 {{> layout/base}}
