--- a/templates/pages/account/orders/completed.html
+++ b/templates/pages/account/orders/completed.html
@@ -4,15 +4,19 @@ orders:
 limit: 3
 ---
 {{#partial "page"}}
-<div class="account">
-    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-    <h2 class="account-heading title">{{lang 'account.orders.heading' }}</h2>
-    {{> components/account/navigation account_page='orders'}}
-    <div class="account-row orders-row">
-        <section class="orders">
-            {{> components/account/orders-list orders=customer.orders}}
-            {{> components/common/small-paginator pagination.orders}}
-        </section>
+<div class="wrapper p-0 customAccount__wrapper">
+    <div class="customAccount__left">
+        {{> components/account/navigation account_page='orders'}}
+    </div>
+
+    <div class="customAccount__right">
+        <h2 class="account-heading title">{{lang 'account.orders.heading' }}</h2>
+        <div class="account-row orders-row">
+            <section class="orders">
+                {{> components/account/orders-list orders=customer.orders}}
+                {{> components/common/small-paginator pagination.orders}}
+            </section>
+        </div>
     </div>
 </div>
 {{/partial}}
