--- a/templates/pages/account/payment-methods.html
+++ b/templates/pages/account/payment-methods.html
@@ -1,11 +1,16 @@
 {{#partial "page"}}
-    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-    <h2 class="page-heading">{{lang 'account.payment_methods.heading' }}</h2>
-    {{> components/account/navigation account_page='payment_methods'}}
+    <div class="wrapper p-0 customAccount__wrapper">
+        <div class="customAccount__left">
+            {{> components/account/navigation account_page='payment_methods'}}
+        </div>
 
-    <div class="account account--fixedLarge">
-        <div class="account-body">
-            {{> components/account/payment-methods-list }}
+        <div class="customAccount__right">
+            <h2 class="page-heading">{{lang 'account.payment_methods.heading' }}</h2>
+            <div class="account account--fixedLarge">
+                <div class="account-body">
+                    {{> components/account/payment-methods-list }}
+                </div>
+            </div>
         </div>
     </div>
 {{/partial}}
