--- a/templates/pages/account/recent-items.html
+++ b/templates/pages/account/recent-items.html
@@ -1,15 +1,17 @@
 {{#partial "page"}}
-<div class="account">
-    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-    <h2 class="page-heading">{{lang 'account.recent_items.heading' }}</h2>
-    {{> components/account/navigation account_page='recent_items'}}
+<div class="wrapper p-0 customAccount__wrapper">
+    <div class="customAccount__left">
+        {{> components/account/navigation account_page='recent_items'}}
+    </div>
 
-    {{#unless customer.recently_viewed_products.items}}
-        {{> components/common/alert/alert-info (lang 'account.recent_items.no_items')}}
-    {{/unless}}
-
-    <div>
-        {{> components/products/grid products=customer.recently_viewed_products.items show_compare=customer.recently_viewed_products.show_compare}}
+    <div class="customAccount__right">
+        <h2 class="page-heading">{{lang 'account.recent_items.heading' }}</h2>
+        {{#unless customer.recently_viewed_products.items}}
+            {{> components/common/alert/alert-info (lang 'account.recent_items.no_items')}}
+        {{/unless}}
+        <div>
+            {{> components/products/grid products=customer.recently_viewed_products.items show_compare=customer.recently_viewed_products.show_compare}}
+        </div>
     </div>
 </div>
 {{/partial}}
