--- a/templates/pages/account/wishlist-details.html
+++ b/templates/pages/account/wishlist-details.html
@@ -1,30 +1,31 @@
 {{#partial "page"}}
-<div class="account" data-pagination-wishlist>
+<div class="wrapper p-0 customAccount__wrapper" data-pagination-wishlist>
 
     {{#if wishlist.is_editable}}
-        {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-    {{/if}}
-    <h2 class="page-heading">{{lang 'account.wishlists.view_heading' name=wishlist.name}}</h2>
-    {{#if wishlist.is_editable}}
-        {{> components/account/navigation account_page='wishlists'}}
+        <div class="customAccount__left">
+            {{> components/account/navigation account_page='wishlists'}}
+        </div>
     {{/if}}
 
-    {{#if wishlist.is_editable}}
-        {{#if wishlist.is_public '>' 0}}
-            <div class="panel share-wishlist">
-                <div class="panel-body">
-                    <h5>{{lang 'account.wishlists.share_intro'}}</h5>
-                    <input class="form-input" value="{{settings.base_url}}{{wishlist.share_url}}" readonly>
+
+    <div class="customAccount__right">
+        <h2 class="page-heading">{{lang 'account.wishlists.view_heading' name=wishlist.name}}</h2>
+        {{#if wishlist.is_editable}}
+            {{#if wishlist.is_public '>' 0}}
+                <div class="panel share-wishlist">
+                    <div class="panel-body">
+                        <h5>{{lang 'account.wishlists.share_intro'}}</h5>
+                        <input class="form-input" value="{{settings.base_url}}{{wishlist.share_url}}" readonly>
+                    </div>
                 </div>
-            </div>
+            {{/if}}
         {{/if}}
-    {{/if}}
-
-    {{#if wishlist.items}}
-        {{> components/account/wishlist-item-list show_remove=wishlist.is_editable}}
-    {{else}}
-        {{> components/common/alert/alert-info (lang 'account.wishlists.empty_wishlist')}}
-    {{/if}}
+        {{#if wishlist.items}}
+            {{> components/account/wishlist-item-list show_remove=wishlist.is_editable}}
+        {{else}}
+            {{> components/common/alert/alert-info (lang 'account.wishlists.empty_wishlist')}}
+        {{/if}}
+    </div>
 
 </div>
 {{/partial}}
