--- a/assets/scss/components/foundation/lazyLoad/_lazyLoad.scss
+++ b/assets/scss/components/foundation/lazyLoad/_lazyLoad.scss
@@ -28,3 +28,14 @@
         width: 100%;
     }
 }
+
+
+@mixin image-loaded-padding($size-param) {
+    &::after {
+        content: "";
+        display: block;
+        height: 0;
+        padding-bottom: get-padding($size-param);
+        width: 100%;
+    }
+}
