--- a/templates/components/common/body.html
+++ b/templates/components/common/body.html
@@ -1,7 +1,7 @@
 <div class="body" id="main-content" data-currency-code="{{currency_selector.active_currency_code}}">
     {{#block "hero"}} {{/block}}
 
-    {{#or (if page_type '===' 'default') (if page_type '===' 'category') (if page_type '===' 'product') (if (toLowerCase page.title) '==' 'ez street')}}
+    {{#or (if page_type '===' 'default') (if page_type '===' 'category') (if page_type '===' 'product') (if page_type '===' 'blog') (if (toLowerCase page.title) '==' 'ez street')}}
         {{#block "page"}} {{/block}}
     {{else}}
         <div class="container">
