Done Feture Blog Post Function

--- a/templates/components/custom/home/home-feature-post.html
+++ b/templates/components/custom/home/home-feature-post.html
@@ -1,5 +1,5 @@
-<section class="homeFeaturePost" data-section-load="check-aos">
-    <div class="homeFeaturePost__wrapper">
+<section class="sectionFuturePost" data-section-load="check-aos">
+    <div class="sectionFuturePost__wrapper">
         {{#each (limit post 1)}}
             <div class="postItem">
                 <div class="postItem__left">
