--- a/assets/scss/layouts/blog/_blog.scss
+++ b/assets/scss/layouts/blog/_blog.scss
@@ -50,6 +50,11 @@
 
             > a {
                 @include lazy-loaded-padding('blog_size');
+
+                .page-type-blog_post & {
+                    @include lazy-loaded-padding('blog_post_size');
+                }
+
                 display: block;
             }
 
@@ -57,6 +62,10 @@
                 @include lazy-loaded-img();
                 width: 100%;
                 height: 100%;
+
+                .page-type-blog_post & {
+                    object-fit: cover;
+                }
             }
         }
     }
@@ -95,5 +104,174 @@
             font-size: 12px;
             line-height: 15px;
         }; 
+    }
+}
+
+
+.blog-thumbnail {
+    img {
+        width: 100%;
+    }
+}
+
+// * ------ Blog Post Detail ------
+.csmBlogPost {
+    &__item {
+        .blog-post-figure {
+            margin-bottom: 16px;
+        }
+    
+        .blog-post-body {
+            padding-top: 0;
+    
+        }
+    
+        .blog-title {
+            margin: 11px 0 26px;
+            font-weight: 700;
+            font-size: 37px;
+            line-height: 44px;
+            letter-spacing: 0;
+        }
+    }
+
+    &__wrapper {
+        hr {
+            margin: 20px 0;
+            border-color: $input-border-color;
+        }
+    }
+
+    &__grid {
+        display: grid;
+        gap: 32px;
+        grid-template-columns: auto minmax(300px, 360px);
+        align-items: start;
+
+        @include smax-s {
+            grid-template-columns: auto;
+        }; 
+    }
+
+    &__meta {
+        .meta__date {
+            font-size: 13px;
+            font-weight: 300;
+            line-height: 18px;
+            color: #646464;
+            padding: 7px 0;
+            margin: 6.4px 20px 6.4px 0;
+        }
+
+        .meta__share {
+            text-transform: uppercase;
+            font-size: 13px;
+            line-height: 18.2px;
+            letter-spacing: 1.3px;
+            font-weight: 400;
+        }
+    }
+
+    &__content {
+        padding: 14px 0 0;
+        line-height: 26px;
+        font-size: 18px;
+        word-break: break-word;
+
+        @include smax-s {
+            font-size: 15.75px;
+        }; 
+
+        p {
+            font-size: inherit;
+            line-height: inherit;
+            margin: 0 0 24px;
+        }
+
+        h3 {
+            margin: 18.4px 0;
+            line-height: 1.2;
+            font-size: 36.8px;
+            font-weight: $fontWeight-normal;
+
+            @include smax-s {
+                font-size: 31px;
+            }; 
+        }
+        ol {
+            margin: 0 0 16px 32px;
+            font-size: $fontSize-root;
+            line-height: inherit;
+
+            li {
+                margin: 0 0 4px;
+            }
+        }
+    }
+
+    &__recentlyPost {
+        position: sticky;
+        top: 118px;
+        max-width: 100%;
+        padding-left: 20px;
+        padding-top: 30px;
+
+        h3 {
+            margin: 9px 0 15px;
+            padding: 8px 0;
+            font-size: 18.4px;
+            font-weight: $fontWeight-thin;
+            line-height: 1.4;
+            border-bottom: 1px solid $input-border-color;
+        }
+    }
+}
+
+.recentPosts {
+    &__list {
+        margin-top: 30px;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: left;
+        position: relative;
+        min-height: 120px;
+        margin-bottom: 30px;
+        transition: box-shadow .3s ease-out;
+        border: 1px solid $input-border-color;
+        text-decoration: none;
+
+        &:hover {
+            box-shadow: 0 0 5px #00000026;
+        }
+    }
+
+    &__image {
+        flex: 0 0 105px;
+        align-self: stretch;
+        overflow: hidden;
+        @include image-padding-bottom(105,118);
+    }
+
+    &__info {
+        padding: 10px 10px 10px 5%;
+        flex: 1;
+
+        p {
+            margin: 0 0 9px;
+            color: $color-textBase;
+            font-size: $fontSize-root;
+            font-weight: $fontWeight-normal;
+            line-height: 19px;
+        }
+
+        .date {
+            color: #646464;
+            margin-top: 8px;
+            font-size: 14px;
+        }
     }
 }
