Done Share Post Function

--- a/templates/components/blog/post-detail.html
+++ b/templates/components/blog/post-detail.html
@@ -27,7 +27,7 @@
                 <div class="csmBlogPost__meta flex flex-between flex-center-x">
                     <p class="meta__date">{{post.date_published}}</p>
 
-                    <button type="button" class="meta__share" data-share-button="" data-share-url="{{url}}">
+                    <button type="button" class="meta__share">
                         <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-share" viewBox="0 0 24 24">
                             <path d="M18 22a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-14a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path>
                             <path d="m15.5 6.5-7 4m0 3 7 4" stroke="#000"></path>
